--- a/board_frontend/package.json
+++ b/board_frontend/package.json
@@ -4,13 +4,18 @@
   "homepage": "https://zonayedpca.github.io/react-mini-blog",
   "private": true,
   "dependencies": {
+    "axios": "^1.5.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^8.1.2",
     "react-render-html": "^0.6.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "1.1.4",
+    "redux": "^4.2.1",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.2",
     "uuid": "^3.2.1"
   },
   "scripts": {
